Source/WebCore/Modules/webdatabase/DatabaseManager.cpp
@@ -397,6 +397,11 @@ bool DatabaseManager::deleteDatabase(SecurityOrigin* origin, const String& name)
     return m_server->deleteDatabase(origin, name);
 }
 
+void DatabaseManager::setPauseAllDatabases(bool pauseAllDatabases)
+{
+    m_server->setPauseAllDatabases(pauseAllDatabases);
+}
+
 void DatabaseManager::interruptAllDatabasesForContext(ScriptExecutionContext* context)
 {
     RefPtr<DatabaseContext> databaseContext = existingDatabaseContextFor(context);
