Source/WebKit2/WebProcess/WebCoreSupport/WebDatabaseManager.h
@@ -46,6 +46,8 @@ public:
     void setQuotaForOrigin(const String& originIdentifier, unsigned long long quota) const;
     void deleteAllDatabases() const;
 
+    void setPauseAllDatabases(bool);
+
 private:
     // WebProcessSupplement
     virtual void initialize(const WebProcessCreationParameters&) override;
