Source/WebKit2/WebProcess/WebPage/WebPage.h
@@ -786,9 +786,12 @@ public:
     void updateVisibleContentRects(const VisibleContentRectUpdateInfo&, double oldestTimestamp);
     bool scaleWasSetByUIProcess() const { return m_scaleWasSetByUIProcess; }
     void willStartUserTriggeredZooming();
+
     void applicationWillResignActive();
     void applicationWillEnterForeground();
+    void applicationDidEnterBackground(uint64_t callbackID);
     void applicationDidBecomeActive();
+
     void zoomToRect(WebCore::FloatRect, double minimumScale, double maximumScale);
     void completePendingSyntheticClickForContentChangeObserver();
 #endif
